# menyy

./: README.md  pyproject.toml
menyy/: __main__.py  cli.py  pickers.py  tmux.py
menyy/builtins/: defaults.toml  fs.toml  git.toml  tmux.toml
