[project]
name = "menyy"
version = "0.1.0"
description = "Hotkey-driven nested menu backed by fzf, configured in TOML"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
menyy = "menyy.cli:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
